--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="col">
+        <div class="col">
                     <div class="card mb-4 rounded-3 shadow-sm h-100">
                         <div class="card-header py-3">
                             <h4 class="my-0 fw-normal">Panda Express &#174</h4>
@@ -30,10 +30,10 @@
                         <div class="card-body">
                             <img src="/images/Panda_Express_logo.png" class="card-image img-thumbnail"
                                 alt="Panda Express' Logo">
-                            <a href="/panda-express" class="w-100 btn btn-lg btn-outline-primary mt-2">Get started</a>
+                            <a href="/panda-express" class="w-100 btn btn-lg btn-outline-primary mt-2 disabled">Get started</a>
                         </div>
                     </div>
-                </div> -->
+                </div>
     </div>
 </main>
 <%- include('./includes/end.ejs') %>;
