--- a/views/408.ejs
+++ b/views/408.ejs
@@ -1,7 +1,7 @@
 <%- include('./includes/head.ejs') %>
 <h1 class="display-4 fw-normal">404</span></h1>
 <p class="fs-5 px-lg-5 mx-lg-5 px-md-1 mx-md-1 text-muted">
-    McDonald's interfering with our work. Please try again.
+    Something went wrong. Please, try again.
 </p>
 <a href="/" class="w-10 btn btn-lg btn-outline-primary mt-2">Back to home</a>
 </div>
