--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,16 +1,34 @@
 .bold-font {
-    font-weight: 500;
-    display: inline-block;
+  font-weight: 500;
+  display: inline-block;
 }
 
 @media screen and (min-width: 1200px) {
-    .line-breaker {
-        display: inline-block
-    }
+  .line-breaker {
+    display: inline-block;
+  }
 }
 
 .card-image {
-    width: 100%;
-    height: 27vw;
-    object-fit: cover;
+  width: 100%;
+  height: 27vw;
+  object-fit: cover;
+}
+
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #0d6efd; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
