Change Panda Express button name

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
                         <div class="card-body">
                             <img src="/images/Panda_Express_logo.png" class="card-image img-thumbnail"
                                 alt="Panda Express' Logo">
-                            <a href="/panda-express" class="w-100 btn btn-lg btn-outline-secondary mt-2 disabled">Get started</a>
+                            <a href="/panda-express" class="w-100 btn btn-lg btn-outline-secondary mt-2 disabled">Coming soon</a>
                         </div>
                     </div>
                 </div>
