fix timeout error, differentiate errors 400 and 408

--- a/views/errors/409.ejs
+++ b/views/errors/409.ejs
@@ -3,7 +3,7 @@
 <p class="fs-5 px-lg-5 mx-lg-5 px-md-1 mx-md-1 text-muted">
     That code has been redeemed already.
 </p>
-<a href="/" class="w-10 btn btn-lg btn-outline-primary mt-2">Back to home</a>
+<a href="/mcdonalds" class="w-10 btn btn-lg btn-outline-primary mt-2">Go back</a>
 </div>
 </header>
-<%- include('../includes/end.ejs') %>;
+<%- include('../includes/end.ejs') %>
