--- a/views/result.ejs
+++ b/views/result.ejs
@@ -6,4 +6,4 @@
 <a href="/" class="w-10 btn btn-lg btn-outline-primary mt-2">Back to home</a>
 </div>
 </header>
-<%- include('./includes/end.ejs') %>;
+<%- include('./includes/end.ejs') %>
