--- a/views/errors/400.ejs
+++ b/views/errors/400.ejs
@@ -1,7 +1,7 @@
 <%- include('../includes/head.ejs') %>
 <h1 class="display-4 fw-normal">408</span></h1>
 <p class="fs-5 px-lg-5 mx-lg-5 px-md-1 mx-md-1 text-muted">
-    Something went wrong. Please, try again.
+    Invalid code. Please, try again.
 </p>
 <a href="/mcdonalds" class="w-10 btn btn-lg btn-outline-primary mt-2">Go back</a>
 </div>
